@@ -369,9 +369,12 @@ EOF
 (let ()
   (define (check filename acc loc)
     (##sys#check-string filename loc)
-    (let ((r (fx= 0 (##core#inline "C_test_access" (##sys#make-c-string filename loc) acc))))
-      (unless r (##sys#update-errno))
-      r) )
+    (let ((r (##core#inline "C_test_access" (##sys#make-c-string filename loc) acc)))
+      (if (fx= r -1)
+	  (if (fx= (##sys#update-errno) _eacces)
+	      #f
+	      (posix-error #:file-error loc "cannot access file" filename))
+	  #t)))
   (set! file-read-access? (lambda (filename) (check filename _r_ok 'file-read-access?)))
   (set! file-write-access? (lambda (filename) (check filename _w_ok 'file-write-access?)))
   (set! file-execute-access? (lambda (filename) (check filename _x_ok 'file-execute-access?))) )
